@@ -382,16 +382,6 @@ static void ctl_pass_playing_list(int n, char *args[])
 	signal(SIGTERM, safe_exit);
 	signal(SIGHUP, sig_reset);
 
-	if (opt_force_keysig != 8) {
-		i = current_keysig - ((current_keysig < 8) ? 0 : 16), j = 0;
-		while (i != opt_force_keysig && i != opt_force_keysig + 12)
-			i += (i > 0) ? -5 : 7, j++;
-		while (abs(j - note_key_offset) > 7)
-			j += (j > note_key_offset) ? -12 : 12;
-		if (abs(j - key_adjust) >= 12)
-			j += (j > key_adjust) ? -12 : 12;
-		note_key_offset = j;
-	}
 	i = current_keysig + ((current_keysig < 8) ? 7 : -9), j = 0;
 	while (i != 7)
 		i += (i < 7) ? 5 : -7, j++;
