@@ -1,8 +1,15 @@
+2004-07-10  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* interface/alsaseq_c.c, interface/rtsyn_common.c,
+	  timidity/playmidi.c:
+	  Suppress force keysig transposition at the beginning of
+	  MIDI sequence
+
 2004-07-01  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* interface/alsaseq_c.c, interface/rtsyn_common.c,
 	  timidity/playmidi.c:
-	  Adjust force keysig transpose so that performance may
+	  Adjust force keysig transposition so that performance may
 	  feel it natural
 
 2004-06-30  TAMUKI Shoichi <tamuki@linet.gr.jp>
